[gd_scene load_steps=20 format=3 uid="uid://jkkonv2sljg4"]

[ext_resource type="Script" path="res://scripts/BattleScene.gd" id="1_lecth"]
[ext_resource type="PackedScene" uid="uid://dkfwlnhiyaafu" path="res://scenes/puzzle_grid.tscn" id="2_5ni24"]
[ext_resource type="Texture2D" uid="uid://v5gts4t5ndqx" path="res://assets/portraits/berserker.png" id="2_yu3gp"]
[ext_resource type="FontFile" uid="uid://brfvbtde0o65k" path="res://assets/fonts/FiraCode-Regular.ttf" id="4_ihcf5"]
[ext_resource type="Texture2D" uid="uid://bijt7txsftej7" path="res://assets/portraits/giantspider.png" id="4_sjt3q"]
[ext_resource type="FontFile" uid="uid://dvxbp285xmtig" path="res://assets/fonts/Knights Quest.ttf" id="5_ktfci"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65b73"]
bg_color = Color(0.0862612, 0.0928061, 0.113046, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.934474, 0.714294, 0.0739198, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppbgo"]
bg_color = Color(0.174144, 0.171822, 0.171822, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtu2s"]
bg_color = Color(0.540732, 0.0249929, 0.0249929, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtqc3"]
bg_color = Color(0.214876, 0.204945, 0.204945, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7ny7"]
bg_color = Color(0.291736, 0.446206, 0.554309, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7w0q"]
bg_color = Color(0.0723144, 0.0708743, 0.0708743, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.493211, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ek84"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.988235, 0.427451, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmqb4"]
bg_color = Color(0.316706, 0.310399, 0.310399, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5g10p"]
bg_color = Color(0.905882, 0.298039, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwlri"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.975206, 0.885145, 0.551738, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8a7x"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.607843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtvga"]
bg_color = Color(0.0994691, 0.0994691, 0.0994691, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.418536, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yvuy"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0, 0, 0, 0.239216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.649351, 0.423094, 0, 1)
border_blend = true

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lecth")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="CharacterPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_65b73")

[node name="PartyHealthBar" type="Panel" parent="CharacterPanel"]
layout_mode = 0
offset_right = 198.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterPanel/PartyHealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_right = 85.0
offset_bottom = 54.0
grow_horizontal = 2

[node name="HealthLabel" type="Label" parent="CharacterPanel/PartyHealthBar/VBoxContainer"]
layout_mode = 2
text = "Party Health"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CharacterPanel/PartyHealthBar/VBoxContainer"]
custom_minimum_size = Vector2(170, 12)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ppbgo")
theme_override_styles/fill = SubResource("StyleBoxFlat_gtu2s")
max_value = 120.0
show_percentage = false

[node name="HealthValueLabel" type="Label" parent="CharacterPanel/PartyHealthBar/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "120/120"
horizontal_alignment = 1

[node name="Character1" type="PanelContainer" parent="CharacterPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 190.0
offset_bottom = 280.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterPanel/Character1"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="CharacterPanel/Character1/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_yu3gp")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="CharacterPanel/Character1/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Sample Name"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="CharacterPanel/Character1/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Berserker"
horizontal_alignment = 1

[node name="PowerBar" type="ProgressBar" parent="CharacterPanel/Character1/VBoxContainer"]
custom_minimum_size = Vector2(160, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qtqc3")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7ny7")
value = 50.0
show_percentage = false

[node name="PowerLabel" type="Label" parent="CharacterPanel/Character1/VBoxContainer/PowerBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 13.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 9
text = "50/100"
horizontal_alignment = 1

[node name="Character2" type="PanelContainer" parent="CharacterPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 270.0
offset_right = 190.0
offset_bottom = 490.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterPanel/Character2"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="CharacterPanel/Character2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_yu3gp")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="CharacterPanel/Character2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Sample Name"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="CharacterPanel/Character2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Berserker"
horizontal_alignment = 1

[node name="PowerBar" type="ProgressBar" parent="CharacterPanel/Character2/VBoxContainer"]
custom_minimum_size = Vector2(160, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qtqc3")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7ny7")
value = 50.0
show_percentage = false

[node name="PowerLabel" type="Label" parent="CharacterPanel/Character2/VBoxContainer/PowerBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 13.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 9
text = "50/100"
horizontal_alignment = 1

[node name="Character3" type="PanelContainer" parent="CharacterPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 480.0
offset_right = 190.0
offset_bottom = 700.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterPanel/Character3"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="CharacterPanel/Character3/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_yu3gp")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="CharacterPanel/Character3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Sample Name"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="CharacterPanel/Character3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Berserker"
horizontal_alignment = 1

[node name="PowerBar" type="ProgressBar" parent="CharacterPanel/Character3/VBoxContainer"]
custom_minimum_size = Vector2(160, 12)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qtqc3")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7ny7")
value = 50.0
show_percentage = false

[node name="PowerLabel" type="Label" parent="CharacterPanel/Character3/VBoxContainer/PowerBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 13.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 9
text = "50/100"
horizontal_alignment = 1

[node name="PuzzleGrid" parent="." instance=ExtResource("2_5ni24")]
position = Vector2(250, 170)

[node name="EnemyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x7w0q")

[node name="Enemy1" type="PanelContainer" parent="EnemyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 190.0
offset_bottom = 221.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2ek84")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyPanel/Enemy1"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="EnemyPanel/Enemy1/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("4_sjt3q")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="EnemyPanel/Enemy1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
text = "Slime"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="EnemyPanel/Enemy1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
text = "Normal"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="EnemyPanel/Enemy1/VBoxContainer"]
custom_minimum_size = Vector2(160, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fmqb4")
theme_override_styles/fill = SubResource("StyleBoxFlat_5g10p")
show_percentage = false

[node name="HPLabel" type="Label" parent="EnemyPanel/Enemy1/VBoxContainer/HPBar"]
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
offset_left = -2.0
offset_top = -2.0
offset_right = 178.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_font_sizes/font_size = 11
text = "345"
horizontal_alignment = 1

[node name="CooldownLabel" type="Label" parent="EnemyPanel/Enemy1/VBoxContainer"]
custom_minimum_size = Vector2(180, 15)
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_font_sizes/font_size = 11
text = "asd"
horizontal_alignment = 1

[node name="Enemy2" type="PanelContainer" parent="EnemyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 231.0
offset_right = 192.0
offset_bottom = 449.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2ek84")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyPanel/Enemy2"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="EnemyPanel/Enemy2/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("4_sjt3q")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="EnemyPanel/Enemy2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
text = "Slime"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="EnemyPanel/Enemy2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
text = "Normal"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="EnemyPanel/Enemy2/VBoxContainer"]
custom_minimum_size = Vector2(160, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fmqb4")
theme_override_styles/fill = SubResource("StyleBoxFlat_5g10p")
show_percentage = false

[node name="HPLabel" type="Label" parent="EnemyPanel/Enemy2/VBoxContainer/HPBar"]
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
offset_left = -2.0
offset_top = -2.0
offset_right = 178.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_font_sizes/font_size = 11
text = "345"
horizontal_alignment = 1

[node name="CooldownLabel" type="Label" parent="EnemyPanel/Enemy2/VBoxContainer"]
custom_minimum_size = Vector2(180, 15)
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_font_sizes/font_size = 11
text = "asd"
horizontal_alignment = 1

[node name="Enemy3" type="PanelContainer" parent="EnemyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 455.0
offset_right = 192.0
offset_bottom = 673.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2ek84")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyPanel/Enemy3"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="EnemyPanel/Enemy3/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("4_sjt3q")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="EnemyPanel/Enemy3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
text = "Slime"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="EnemyPanel/Enemy3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
text = "Normal"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="EnemyPanel/Enemy3/VBoxContainer"]
custom_minimum_size = Vector2(160, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fmqb4")
theme_override_styles/fill = SubResource("StyleBoxFlat_5g10p")
show_percentage = false

[node name="HPLabel" type="Label" parent="EnemyPanel/Enemy3/VBoxContainer/HPBar"]
custom_minimum_size = Vector2(180, 25)
layout_mode = 2
offset_left = -2.0
offset_top = -2.0
offset_right = 178.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_font_sizes/font_size = 11
text = "345"
horizontal_alignment = 1

[node name="CooldownLabel" type="Label" parent="EnemyPanel/Enemy3/VBoxContainer"]
custom_minimum_size = Vector2(180, 15)
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0.298039, 0.235294, 1)
theme_override_font_sizes/font_size = 11
text = "asd"
horizontal_alignment = 1

[node name="NextPiecePreview" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 10.0
offset_right = -200.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hwlri")

[node name="Label" type="Label" parent="NextPiecePreview"]
layout_mode = 0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 28.0
text = "NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewContainer" type="Control" parent="NextPiecePreview"]
anchors_preset = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 110.0

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -70.0
offset_right = -240.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_a8a7x")

[node name="TurnLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 99.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.180392, 0.8, 0.443137, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_ihcf5")
theme_override_font_sizes/font_size = 13
text = "Player Turn"

[node name="ComboLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 50.0
offset_bottom = 53.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_ihcf5")
theme_override_font_sizes/font_size = 16
text = "Combo: 0x"

[node name="EnemyCountLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 675.0
offset_top = 20.0
offset_right = 774.0
offset_bottom = 43.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_ihcf5")
theme_override_font_sizes/font_size = 16
text = "Enemies: 3"
horizontal_alignment = 2

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xtvga")

[node name="Title" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 80.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_ktfci")
theme_override_font_sizes/font_size = 56
text = "GAME OVER"
horizontal_alignment = 1

[node name="Message" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 220.0
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="GameOverPanel"]
layout_mode = 0
offset_left = 150.0
offset_top = 230.0
offset_right = 350.0
offset_bottom = 280.0
alignment = 1

[node name="QuitButton" type="Button" parent="GameOverPanel/Buttons"]
layout_mode = 2
text = "RETURN"

[node name="CombatLog" type="RichTextLabel" parent="."]
z_index = 10
layout_mode = 0
offset_left = 457.0
offset_top = 10.0
offset_right = 1039.0
offset_bottom = 128.0
theme_override_constants/outline_size = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_6yvuy")
bbcode_enabled = true
scroll_following = true
